--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "prettier": "^2.6.0",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.8",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.2"
   }
 }
