--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -3,15 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "build": "tsc",
-      "test": "jest"
+        "build": "tsc",
+        "test": "jest"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.93",
         "@types/ramda": "^0.28.2",
         "ts-loader": "^9.2.8"
-      },
-      "dependencies": {
-        "ramda": "^0.28.0"
-      }
-  }
+    },
+    "dependencies": {
+        "ramda": "^0.28.0",
+        "uuid": "^8.3.2"
+    }
+}
