--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
   "homepage": "https://github.com/gdunkle/aws-anthology-workshop-lti-tooling#readme",
   "dependencies": {
     "aws-sdk": "^2.1098.0",
-    "formik": "^2.2.9"
+    "formik": "^2.2.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.93",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.22",
     "@types/ramda": "^0.28.2",
+    "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
     "prettier": "^2.6.0",
     "ts-jest": "^27.1.3",
