--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,21 @@
         {
             "type": "aws-sam",
             "request": "direct-invoke",
+            "name": "lambdas:src/lti-platform-register.handler (nodejs14.x)",
+            "invokeTarget": {
+                "target": "code",
+                "projectRoot": "${workspaceFolder}/lambdas",
+                "lambdaHandler": "src/lti-platform-register.handler"
+            },
+            "lambda": {
+                "runtime": "nodejs14.x",
+                "payload": {},
+                "environmentVariables": {}
+            }
+        },
+        {
+            "type": "aws-sam",
+            "request": "direct-invoke",
             "name": "lambdas:src/lti-oidc.handler (nodejs14.x)",
             "invokeTarget": {
                 "target": "code",
