--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -7,12 +7,14 @@
         "test": "jest"
     },
     "devDependencies": {
-        "@types/aws-lambda": "^8.10.93",
+        "@types/aws-lambda": "^8.10.94",
         "@types/ramda": "^0.28.2",
+        "aws-jwt-verify": "^3.0.0",
         "ts-loader": "^9.2.8"
     },
     "dependencies": {
         "ramda": "^0.28.0",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "aws-jwt-verify": "^3.0.0"
     }
 }
