--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "aws-jwt-verify": "^3.0.0",
     "aws-sdk": "^2.1098.0",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
+    "pem-jwk": "^2.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.93",
+    "@types/aws-lambda": "^8.10.94",
     "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.22",
     "@types/ramda": "^0.28.2",
     "@types/uuid": "^8.3.4",
+    "aws-jwt-verify": "^3.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.0",
     "ts-jest": "^27.1.3",
